layout landing revisi, added register (masih perlu styling)

--- a/resources/rawHTML/landing.html
+++ b/resources/rawHTML/landing.html
@@ -28,8 +28,8 @@
                             <label class="form-label">Password</label>
                             <input type="password" class="form-control">
                         </div>
-                        <button type="submit" class="btn btn-primary w-100">Login</button>
-                        <button type="submit" class="btn btn-secondary w-100 mt-2">Daftar</button>
+                        <button type="submit" class="btn btn-primary w-100 mb-2">Login</button>
+                        <div class="form-text">Belum punya akun? daftar <a class="font-weight-bold" style="cursor: pointer">disini.</a></div>
                     </form>
                 </div>
             </div>
