--- a/resources/rawHTML/plugins/profile.html
+++ b/resources/rawHTML/plugins/profile.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-	<title>Login</title>
+	<title>LOGIN</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<style>
 		body {
-			background: -webkit-linear-gradient(bottom, #a7d2cb, #f2d388, #c98474, #874c62);
+			background: -webkit-linear-gradient(bottom, #00d8f5, #ffffff, #ffffff, #ffffff);
 			background-repeat: no-repeat;
 		}
 
@@ -32,7 +32,7 @@
 		}
 
 		.underline-title {
-			background: -webkit-linear-gradient(right, #a7d2cb, #f2d388, #c98474, #874c62);
+			background: -webkit-linear-gradient(right, #87f1ff, #447fa7, #0a8abd, #ddfdff);
 			height: 2px;
 			margin: -1.1rem auto 0 auto;
 			width: 89px;
@@ -54,13 +54,13 @@
 		}
 
 		.form-border {
-			background: -webkit-linear-gradient(right, #a7d2cb, #f2d388, #c98474, #874c62);
+			background: -webkit-linear-gradient(right, #a7d2cb, #07e0d6, #17c9cf, #8ae1ec);
 			height: 1px;
 			width: 100%;
 		}
 
 		.form-content {
-			background: #fbfbfb;
+			background: #ffffff;
 			border: none;
 			outline: none;
 			padding-top: 14px;
@@ -75,7 +75,7 @@
 		}
 
 		#submit-btn {
-			background: -webkit-linear-gradient(right, #c98474, #874c62);
+			background: -webkit-linear-gradient(right, #6ec2c5, #2b89d6);
 			border: none;
 			border-radius: 21px;
 			box-shadow: 0px 1px 8px #355c7d;
@@ -89,7 +89,7 @@
 		}
 
 		#submit-btn:hover {
-			box-shadow: 0px 1px 18px #f8b195;
+			box-shadow: 0px 1px 18px #2293b6;
 		}
 
 		#card h4 {
@@ -120,22 +120,22 @@
 				<h4>Silahkan masuk terlebih dahulu untuk masuk pada website</h4>
 			</div>
 			<form action="home.html" method="post" class="form">
+                <label for="user-name" style="padding-top:22px">&nbsp;Nama</label>
+				<input id="user-name" class="form-content" type="String" name="name" required />
+				<div class="form-border"></div>
 				<label for="user-email" style="padding-top:13px">&nbsp;Email</label>
 				<input id="user-email" class="form-content" type="email" name="email" autocomplete="on" required />
-				<div class="form-border"></div>
-				<label for="user-password" style="padding-top:22px">&nbsp;Password</label>
-				<input id="user-password" class="form-content" type="password" name="password" required />
 				<div class="form-border"></div>
 				<input id="submit-btn" type="submit" name="submit" value="LOGIN" /></a>
 				<div class="regis">
 					<center>
-						<a href="registrasi.html"><input id="submit-btn" type="button" name="submit"
+						<a href="register-user.html"><input id="submit-btn" type="button" name="submit"
 								value="REGISTER" /></a><a href="#" id="signup"></a>
 					</center>
 				</div>
 			</form>
 			<p></p>
-			<img src="img/logo.png">
+			<img src="images/team/logo.png">
 </body>
 
 </html>
