--- a/resources/rawHTML/index.html
+++ b/resources/rawHTML/index.html
@@ -82,7 +82,7 @@
 					<span class="text-uppercase text-sm letter-spacing ">WeSurviveCovid</span>
 					<h1 class="mb-3 mt-3">Solusi Anda Di Masa Pandemi Ini</h1>
 
-					<p class="mb-4 pr-5">A repudiandae ipsam labore ipsa voluptatum quidem quae laudantium quisquam aperiam maiores sunt fugit, deserunt rem suscipit placeat.</p>
+					<p class="mb-4 pr-5">Berbagai Informasi Tentang Postingan, Artikel, Saran, & Tempat Vaksinasi Terkait Permasalahan Pandemi Covid-19 Dapat Dilihat Semua Pada WeSurviveCovid!</p>
 				</div>
 			</div>
 		</div>
@@ -99,7 +99,7 @@
 						</div>
 						<span>24 Jam Siap Melayani</span>
 						<h4 class="mb-3">Bantuan Covid Dari Dokter</h4>
-						<p class="mb-4">Get ALl time support for emergency.We have introduced the principle of family medicine.</p>
+						<p class="mb-4">Dapatkan berbagai informasi seputar saran disaat pandemi Covid-19 dari dokter terbaik yang ada di WeSurviveCovid</p>
 						<a href="appoinment.html" class="btn btn-main btn-round-full">Segera Lihat Tips anda Tricks</a>
 					</div>
 
@@ -122,7 +122,7 @@
 						</div>
 						<span>Sharing Sesama</span>
 						<h4 class="mb-3">Postingan Pengalaman Covid</h4>
-						<p>Get ALl time support for emergency.We have introduced the principle of family medicine.Get Conneted with us for any urgency .</p>
+						<p>Berbagilah dan dapatkan informasi pengalaman di masa pandemi Covid-19 dari seluruh penjuru masyarakat Indonesia</p>
 					</div>
 				</div>
 			</div>
@@ -142,7 +142,7 @@
 			<div class="col-lg">
 				<div class="about-content pl-4 mt-4 mt-lg-0">
 					<h2 class="title-color">Artikel</h2>
-					<p class="mt-4 mb-5">We provide best leading medicle service Nulla perferendis veniam deleniti ipsum officia dolores repellat laudantium obcaecati neque.</p>
+					<p class="mt-4 mb-5">Bacalah berbagai artikel yang sangat bermanfaat terkait pandemi Covid-19, tentunya semua artikel disini bersumber dari berbagai dokter yang ahli di bidangnya</p>
 
 					<a href="service.html" class="btn btn-main-2 btn-round-full btn-icon">Services<i class="icofont-simple-right ml-3"></i></a>
 				</div>
@@ -154,7 +154,7 @@
             <div class="col-lg">
                 <div class="about-content pl-4 mt-4 mt-lg-0">
                     <h2 class="title-color">Postingan</h2>
-                    <p class="mt-4 mb-5">We provide best leading medicle service Nulla perferendis veniam deleniti ipsum officia dolores repellat laudantium obcaecati neque.</p>
+                    <p class="mt-4 mb-5">Anda punya pertanyaan, informasi bermanfaat, berbagi pengalaman terkait pandemi Covid-19? mari berbagilah di postingan WeSurviveCovid!</p>
 
                     <a href="service.html" class="btn btn-main-2 btn-round-full btn-icon">Services<i class="icofont-simple-right ml-3"></i></a>
                 </div>
@@ -176,7 +176,7 @@
             <div class="col-lg">
                 <div class="about-content pl-4 mt-4 mt-lg-0">
                     <h2 class="title-color">Tempat <br>Vaksinasi</h2>
-                    <p class="mt-4 mb-5">We provide best leading medicle service Nulla perferendis veniam deleniti ipsum officia dolores repellat laudantium obcaecati neque.</p>
+                    <p class="mt-4 mb-5">Bingung soal informasi tempat vaksinasi? Dapatkan informasi tersebut pada WeSurviveCovid, mulai dari informasi alamat tempat vaksinasi, jadwal, jenis vaksin, dan persyaratan dapat dilihat disini!</p>
 
                     <a href="service.html" class="btn btn-main-2 btn-round-full btn-icon">Services<i class="icofont-simple-right ml-3"></i></a>
                 </div>
@@ -192,7 +192,7 @@
 				<div class="section-title text-center">
 					<h2>Penghargaan Kami</h2>
 					<div class="divider mx-auto my-4"></div>
-					<p>Lets know moreel necessitatibus dolor asperiores illum possimus sint voluptates incidunt molestias nostrum laudantium. Maiores porro cumque quaerat.</p>
+					<p>Percayakan kepada kami tentang informasi terkait pandemi Covid-19. Tentunya kami telah mendapatkan berbagai penghargaan dari berbagai instansi, sehingga dapat membuat WeSurviveCovid lebih terpercaya bagi kalian semua!</p>
 				</div>
 			</div>
 		</div>
